--- a/src/components/OwnerSection.css
+++ b/src/components/OwnerSection.css
@@ -8,7 +8,6 @@ div {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     display: flex;
     justify-content: center;
 }
